--- a/src/app/nav-container/nav-container.component.scss
+++ b/src/app/nav-container/nav-container.component.scss
@@ -1,11 +1,11 @@
-.sidenav-container {
-  height: 100%;
-  margin-top: 2rem;
-}
+// .sidenav-container {
+//   height: 100%;
+//   margin-top: 2rem;
+// }
 
 .sidenav {
   width: 200px;
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 
 .sidenav .mat-toolbar {
@@ -20,5 +20,9 @@
 
 .main-content {
   padding: 20px;
+  background: url("../../assets/img/cchmc-pattern.PNG") repeat center center fixed;
+  -webkit-background-size: repeat;
+  -moz-background-size: repeat;
+  // -o-background-size: cover;
+  background-size: repeat;
 }
-
